--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 
 
           <!-- What is Popit -->
-            <div class="whatPopit-container">
+            <div class="whatPopit-container" id="about">
               <div class="whatPopit-text">
                 <h1><strong>What is POP IT?</strong></h1>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem eum corrupti dolor nemo assumenda autem eos voluptatibus tempore, aspernatur velit impedit veritatis nisi, nam molestias sunt quis consectetur deserunt libero quia harum! Minus dignissimos harum id eveniet. Voluptatum, voluptates voluptatem.
@@ -165,7 +165,7 @@
             </div>
 
             <!-- Popt It Shop -->
-            <div class="popitShop-container">
+            <div class="popitShop-container" id="projects">
               <h1><strong>Get your own POP IT!</strong></h1>
               <div class="popitItems-container">
 
